# PerturbNova

./: .gitignore  README.md  pyproject.toml  test.ipynb
configs/replogle/common/: base.toml
configs/replogle/inference/: base.toml
configs/replogle/model/: film_latent_diffusion.toml
configs/replogle/training/: base.toml  stage1.toml  stage2.toml  stage2_unfrozen_vae.toml  stage2_unfrozen_vae_v1.toml
configs/replogle_zeroshot/inference/: base.toml
experiments/replogle_stage2_ablation_500k_20260408/: LOG.md  README.md  run_matrix.csv
experiments/replogle_stage2_ablation_500k_20260408/scripts/: README_sbatch.md  batch_submit_all.sh  batch_submit_fewshot.sh  batch_submit_zeroshot.sh  enter_allocation_shell.sh  generate_configs.py  launch_fewshot_all_single_gpu.sh  launch_fewshot_infer_all_single_gpu.sh  launch_fewshot_variant_4gpu.sh  launch_infer_group.sh  launch_on_allocation.sh  launch_stage1_bootstrap.sh  launch_stage2_wave1.sh  launch_stage2_wave2.sh  launch_stage2_wave3.sh  launch_task_all_single_gpu.sh  launch_zeroshot_all_single_gpu.sh  launch_zeroshot_infer_all_single_gpu.sh  on_node_task_variant.sh  pipeline_all.sh  pn_fewshot_frozen_500k.sbatch  (+7 more)
scripts/: infer.sh  train.sh  train_hepg2.sh  train_jurkat.sh  train_k562.sh  train_replogle_fewshot_all.sh  train_replogle_fewshot_pipeline_all.sh  train_replogle_zeroshot_all.sh  train_replogle_zeroshot_pipeline_all.sh  train_rpe1.sh  train_total.sh
src/perturbnova/: config.py  data.py  inference.py  models.py  post_infer_eval.py  trainer.py  vae.py
tests/: test_config.py  test_inference_split.py
(+150 files in other folders)
